--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ a {
 	line-height: 16px;
 }
 
-.header-time-info--phone {
+.header-time-info__phone {
     font-size: 22px;
 	line-height: 24px;
 }
