--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,35 @@
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/roboto.woff") format("woff"),
+         url("../fonts/roboto.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/robotobold.woff") format("woff"),
+         url("../fonts/robotobold.woff2") format("woff2");
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/robotomedium.woff") format("woff"),
+         url("../fonts/robotomedium.woff2") format("woff2");
+    font-weight: medium;
+    font-style: normal;
+
+}
+
+
 body {
 	margin: 0;
 	padding: 0;
-
+     
 	font-family: "Roboto", Arial, sans-serif;
 	font-size: 16px;
 	line-height: 22px;
@@ -41,7 +69,7 @@ a {
 
 .navigation-list__link:active {
 	color: #333333;
-    background-color: #f7f6f3;     /*эффект вдавливания*/
+    background-color: #f7f6f3;     
 }
 
 .navigation-list__link:visited {
@@ -265,6 +293,7 @@ a {
     font-size: 24px;
     line-height: 30px;
     font-weight: 700;
+    color: #323232;
 }
 
 .subscribe {
@@ -322,6 +351,33 @@ a {
 	line-height: 28px;
 	font-weight: 500;
 }
+
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+
+.header-time-info {
+	width: 167px;
+	margin-left: auto;
+	outline: 2px solid yellow;
+}
+
+
+
+
+
+
+
+
+
 
 
 
