--- a/css/style.css
+++ b/css/style.css
@@ -124,12 +124,6 @@ a {
 	color: #e84d37;
 }
 
-.slider-item {
-    max-width: 1045px;
-	min-width: 900px;
-	height: 881px;
-}
-
 .slider-item--first {
 	background-image: url("../img/slid-1.png");
 	
@@ -195,7 +189,9 @@ a {
 }
 
 .form-btn,
-.catalog-input {
+.catalog-input,
+.catalog-form-item,
+.catalog-range {
 	color: #ffffff;
     font-size: 16px;
     line-height: 18px;
@@ -388,29 +384,23 @@ a {
 
 html,
 body {
-	margin: 0 auto;
+	margin: 0;
 	padding: 0;
-	width: 1200px;
-
-	outline: 2px solid red;
-}
-
-.wrap {
-	width: 1146px;
-	margin: 0 27px;
-
-	outline: 2px solid yellow;
+    margin: 0 auto;
 }
 
 .main-header {
+	max-width: 1146px;
+	margin: 0 auto;
 	padding-top: 9px;
+    padding-left: 27px;
+    padding-right: 27px;
+    margin-bottom: 40px;
+    box-sizing: border-box;
 }
 
 .navigation {
 	display: flex;
-	justify-content: space-between;
-
-	outline: 2px solid yellow;
 }
 
 .header-logo {
@@ -421,10 +411,7 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 350px;
-	margin-right: 372px;
 	display: flex;
-
-	outline: 2px solid yellow;
 }
 
 .user-nav {
@@ -432,20 +419,32 @@ body {
 	padding: 0;
 	display: flex;
 	width: 245px;
-
-	outline: 2px solid yellow;
+    margin-left: auto;
 }
 
 .navigation-menu,
 .nav-form,
-.feedback-form {
+.feedback-form,
+.purchase-wrap {
 	display: none;
 }
 
-.time-info-wrap {
+.header-time-info {
 	margin: 0;
 	padding: 0; 
-	outline: 2px solid red;
+}
+
+.time-info-wrap {
+	padding-top: 18px;
+
+}
+.container {
+	max-width: 1146px;
+	padding: 0 27px;
+	margin: 0 auto;
+}
+.slider {
+	margin-bottom: 40px;
 }
 
 .slider-list {
@@ -453,16 +452,47 @@ body {
 	padding: 0;
 }
 
-.offers {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 40px;
-
-	outline: 2px solid green;
+.slider-item__title {
+	margin: 0;
+	padding: 0;
 }
 
+.slider-item {
+	height: 495px;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.slider-item--second,
+.slider-item--third {
+	display: none;
+}
+
+.offers {
+	display: flex;
+	margin-bottom: 40px;
+}
+.offers-item--jam {
+	margin-right: 26px;
+}
 .offers-item {
+	box-sizing: border-box;
 	width: 560px;
+	padding: 22px 20px;
+}
+
+.offers-item__title {
+	margin: 0;
+	padding-bottom: 16px;
+
+}
+.offers-item__info {
+	margin: 0;
+	padding-bottom: 44px;
 }
 
 .product {
@@ -477,21 +507,25 @@ body {
 
 .icy-cream-item {
 	width: 267px;
-
-	outline: 2px solid yellow;
 }
 
 .about-ice-cream {
+	box-sizing: border-box;
 	margin-bottom: 40px;
+	padding: 27px 19px;
+}
 
-	outline: 2px solid red;
+.about-ice-cream__title {
+	margin: 0;
+	padding-bottom: 24px;
+
 }
 
 .about-gllacy {
 	margin: 0;
 	padding: 0;
-
-	outline: 2px solid yellow;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .about-gllacy__info {
@@ -504,10 +538,26 @@ body {
 	margin-bottom: 40px;
 }
 
-.block-item {
-    width: 560px;
+.blog {
+	padding: 19px 20px;
 }
 
+.blog__title {
+	margin: 0;
+	padding-bottom: 10px;
+}
+
+.block-item {
+	box-sizing: border-box;
+    width: 560px;
+}
+.subscribe {
+	padding: 36px 26px;
+}
+.subscribe__info {
+	margin: 0;
+    padding-bottom: 34px;
+}
 .map {
 	width: 100%;
 }
@@ -517,26 +567,37 @@ body {
 }
 
 .main-footer {
+	max-width: 1146px; 
+	margin: 0 auto;
 	margin-top: 40px; 
-}
-
-.main-footer .wrap {
 	display: flex;
+	justify-content: space-between;
 }
 
 .social-btn {
 	width: 187px;
 	margin-right: 212px;
 	display: flex;
+	justify-content: space-between;
 }
 
 .helpful-info {
 	width: 330px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .footer-copyright {
-	width: 190px;
+	width: 200px;
 	margin-left: auto;
+}
+
+
+.catalog {
+	box-sizing: border-box;
+	max-width: 1146px; 
+	margin: 0 auto;
+	padding: 0 27px;
 }
 
 .purchase-wrap {
@@ -545,8 +606,12 @@ body {
 
 .container-form {
 	margin-bottom: 40px;
+	
 }
-
+.catalog-form {
+	display: flex;
+	flex-wrap: wrap;
+}
 .input-name {
 	display: block;
 }
@@ -555,17 +620,23 @@ body {
 	width: 195px;
 }
 
-.catalog-input--price {
+.catalog-range {
 	width: 220px;
 }
-
-.ccatalog-form-item--radio {
+.catalog-input--price {
+	width: 180px;
+}
+.catalog-form-item--radio {
 	width: 418px;
-	background-color: rgba(255, 255, 255, 0.2);
 }
 
-
+.catalog-form-item--checkbox {
+	width: 704px;
+}
 .pagination-list {
 	margin: 0;
 	padding: 0; 
+	width: 195px;
+	display: flex;
+	margin-left: auto;
 }
