--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,143 @@ body {
     margin: 0 auto;
 }
 
+.site-wrapper {
+	min-width: 1200px;
+	background-color: #849d8f;
+	background: url("../img/slid-1.png") no-repeat;
+	background-position: top center;
+	transition: background-image 0.5s ease, background-color 0.5s ease;
+}
+
+.site-wrapper::before,
+.site-wrapper::after {
+  content: "";
+  visibility: hidden;
+}
+
+.site-wrapper::before {
+  background-image: url("../img/slid-2.png");
+}
+
+.site-wrapper::after {
+  background-image: url("../img/slid-3.png");
+}
+
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 27px;
+  box-sizing: border-box;
+}
+.slider {
+  position: relative;
+  padding-top: 272px;
+  text-align: center;
+  color: #ffffff;
+
+  margin-bottom: 41px;
+}
+.slider-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.slide-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 32px;
+  
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 800;
+}
+.slide-button {
+  display: inline-block;
+  padding: 12px 44px;
+
+  font-weight: 600;
+  font-size: 31px;
+  line-height: 41px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: top;
+  text-decoration: none;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+
+  background: #f26843;
+  background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border: none;
+
+  cursor: pointer;
+}
+.slide-button:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slide-button:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+
+  vertical-align: top;
+
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.slider-controls {
+  position: absolute;
+  bottom: 23px;
+  left: 0;
+  z-index: 20;
+  
+  font-size: 0;
+}
+.slide {
+	display: none;
+}
+#product-1:checked ~ .site-wrapper #slide1,
+#product-2:checked ~ .site-wrapper #slide2,
+#product-3:checked ~ .site-wrapper #slide3 {
+  display: block;
+}
+#product-1:checked ~ .site-wrapper label[for="product-1"],
+#product-2:checked ~ .site-wrapper label[for="product-2"],
+#product-3:checked ~ .site-wrapper label[for="product-3"] {
+  background-color: #ffffff;
+}
+
+#product-1:checked ~ .site-wrapper {
+  background-color: #849d8f;
+  background-image: url("../img/slid-1.png");
+}
+
+#product-2:checked ~ .site-wrapper {
+  background-color: #8996a6;
+  background-image: url("../img/slid-2.png");
+}
+
+#product-3:checked ~ .site-wrapper {
+  background-color: #9d8b84;
+  background-image: url("../img/slid-3.png");
+}
+
+
+
+
 .navigation-list,
 .navigation-menu,
 .user-nav,
-.slider-list,
 .product,
 .about-gllacy,
 .social-btn,
@@ -81,19 +214,27 @@ input[type="radio"].visually-hidden {
 	vertical-align: middle;
 
 	background-color: #e84d37;
-	background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-    box-shadow: 0px 1px 2px 0px rgba(172, 16, 0);
+	background-image: linear-gradient( to top, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
+    box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
     border: none;
 
 }
 
+.button:hover {
+	background-image: linear-gradient( to bottom, #f48568 0%, #ec6f5e 100%);
+	box-shadow: 0px 1px 2px rgba(172, 16, 0, 1);
+}
+
+.button:active {
+    background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+    box-shadow: inset 0 2px 2px rgba(148, 39, 24, 1);
+}
+
+
 .main-header {
-	max-width: 1200px;
 	margin: 0 auto;
 	padding-top: 9px;
-    padding-left: 27px;
-    padding-right: 27px;
-    box-sizing: border-box;
+    
 }
 
 .navigation {
@@ -253,7 +394,7 @@ input[type="radio"].visually-hidden {
 .btn-search:hover path,
 .btn-login:hover path,
 .user-nav__list--basket .btn-basket:hover path,
-.muser-nav__list--basket .btn-basket:hover circle {
+.user-nav__list--basket .btn-basket:hover circle {
 	fill: #000000;
 }
 
@@ -414,80 +555,11 @@ input[type="radio"].visually-hidden {
 }
 
 .main-part {
-	max-width: 1200px;
-	padding: 0 27px;
 	margin: 0 auto;
-	box-sizing: border-box;
-}
-                     /*  slider*/
-.slider {
-	margin-bottom: 40px;
-}
-
-.slider-item {
-	height: 495px;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
-}
-
-.slider-item--first {
-	background-image: url("../img/slid-1.png");
 	
 }
-
-.slider-item--second {
-	background-image: url("../img/slid-2.png");
-}
-
-.slider-item--third{
-   background-image: url("../img/slid-3.png");
-}
-.slider-list {
-	margin: 0;
-	padding: 0;
-}
-
-.slider-item__title {
-	margin: 0;
-	padding: 0;
-
-	font-size: 60px;
-	line-height: 60.35px; 
-	font-weight: 700;
-}
-
-
-
-.slider-item--second,
-.slider-item--third {
-	display: none;
-}
-
-                
-
-
-.button--big {
-	font-size: 32px;
-	line-height: 44px;
-
-	text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
-    
-    border-radius: 50px;
-	padding: 8px 40px 13px 42px;
-}
-
-.button--big:hover {
-    background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-    opacity: 0.8;
-    box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.004);
-    text-shadow: 0px 2px 5px #a0200b 0.76%;
-}
-
-
+                    
+            
 .offers {
 	display: flex;
 	margin-bottom: 40px;
@@ -525,13 +597,6 @@ input[type="radio"].visually-hidden {
     padding: 9px 25px 13px 23px;
     border-radius: 24px;
     align-self: flex-end;
-}
-
-.button--offers:hover,
-.button--offers:focus  {
-	background-color: rgba(255, 255, 255, 0.2);
-	background-image: linear-gradient ( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-	box-shadow: 0px 1px 2px 0px rgba(172, 16, 0);
 }
 
 .offers-item--jam {
@@ -779,16 +844,16 @@ input[type="radio"].visually-hidden {
 	line-height: 20px;
 }
 
-
+.map {
+	width: 1200px;
+	margin: 0 auto;
+}
 
 .main-footer {
 	font-size: 13px;
 	line-height: 18px;
 	color: #fefefe;
-
-	max-width: 1200px;
-	padding: 0 27px 20px;
-	box-sizing: border-box; 
+ 
 	margin: 0 auto;
 	margin-top: 10px; 
 	display: flex;
@@ -1085,11 +1150,9 @@ input[type="radio"].visually-hidden {
 
      /*  фильтр    */
 
-.catalog {
-	box-sizing: border-box;
-	max-width: 1200px; 
+.catalog { 
 	margin: 0 auto;
-	padding: 0 27px;
+	
 } 
 
 .catalog__title {
